--- a/src/components/Glass.css
+++ b/src/components/Glass.css
@@ -1,21 +1,31 @@
 .glass {
-  position: relative;
+  
   background: rgba(225, 225, 225, 0.05);
   border-radius: 6px;
   
-  z-index: 10;
+  
   -webkit-backdrop-filter: blur(15px);
   backdrop-filter: blur(15px);
   border-top: 1px solid rgba(225, 225, 225, 0.2);
   border-left: 1px solid rgba(225, 225, 225, 0.2);
   -webkit-box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
-  
   padding: 20px 30px;
-  margin-top: 40px;
+  margin-top: 80px;
+  margin-bottom: 20px;
+  width: 100%;
   
-  min-width: 600px;
-  width: 800px;
+}
+
+@media only screen and (max-width: 825px) {
+  .holderTweets{
+    display: flex;
+  flex-direction: column;
+  column-gap: 30px;
+  align-items: center;
+  align-content: center;
+  width: 100%;
+  }
   
 }
 
@@ -104,10 +114,11 @@
 .holderTweets{
   display: flex;
   flex-direction: row;
-  column-gap: 60px;
+  column-gap: 30px;
   align-items: center;
   align-content: center;
-  width: fit-content;
+  width: 100%;
+  margin-bottom: 20px;
 }
 .imageProf{
   border-radius: 50%;
@@ -150,5 +161,15 @@
   padding: 20px 30px;
   max-width: 1000px;
   
+
+}
+.loadMore{
+  
+  background: rgba(46, 124, 220, 0.4);
+  border-radius: 50%;
+  margin-top: 40px;
+  width: 150px;
+  height: 80px;
+  margin-bottom: 20px;
 
 }
