--- a/src/components/Glass.css
+++ b/src/components/Glass.css
@@ -11,10 +11,40 @@
   -webkit-box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
   padding: 20px 30px;
-  margin-top: 80px;
-  margin-bottom: 20px;
-  width: 100%;
   
+  
+  position:absolute;
+  top:0px;
+  right:0px;
+  bottom:0px;
+  left:0px;
+  margin-top: 4em;
+  
+}
+.glass3{
+  border-radius: 6px;
+  
+  
+  
+  border-top: 1px solid rgba(225, 225, 225, 0.2);
+  border-left: 1px solid rgba(225, 225, 225, 0.2);
+  -webkit-box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+  
+  width: 100vw;
+  
+}
+.glass4{
+  border-radius: 6px;
+  
+  
+  
+  border-top: 1px solid rgba(225, 225, 225, 0.2);
+  border-left: 1px solid rgba(225, 225, 225, 0.2);
+  -webkit-box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+  box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
+  
+  width: 80vw;
 }
 
 @media only screen and (max-width: 825px) {
@@ -54,7 +84,7 @@
   background: transparent;
   outline: none;
   border: none;
-  
+  background: rgba(117, 163, 232, 0.5);
   padding: 10px;
   border-radius: 3px;
   box-shadow: 5px 5px 5px rgb(0 0 0 / 10%);
@@ -159,7 +189,7 @@
   box-shadow: 5px 5px 30px rgba(0, 0, 0, 0.2);
   min-width: 35vw;
   padding: 20px 30px;
-  max-width: 1000px;
+  width: 100%;
   
 
 }
