--- a/src/App.css
+++ b/src/App.css
@@ -41,38 +41,43 @@ header {
   height: fit-content;
   margin-left: 20px;
   margin-right: 40px;
-  background-color: rgb(65, 173, 222,0.1);
+  background: rgba(117, 163, 232, 0.5);
   width: 80%;
   backdrop-filter: blur(15px);
+  
+  
 }
 
 .menu-items {
   position: relative;
   font-size: 14px;
+ 
   
 }
 
 .menu-items p {
   display: block;
   font-size: inherit;
-  color: inherit;
+  color: white;
   text-decoration: none;
   height: 42px;
 }
 
 .menu-items button {
-  color: inherit;
+  color: white;
   font-size: inherit;
   border: none;
   background-color: transparent;
   cursor: pointer;
   width: 100%;
+  
 }
 
 .menu-items p,
 .menu-items button {
   text-align: left;
   padding: 0.7rem 1rem;
+  
 }
 
 .menu-items p:hover,
@@ -92,8 +97,7 @@ header {
 
 .dropdown {
   position: absolute;
-  right: 0;
-  left: auto;
+  
   box-shadow: 0 10px 15px -3px rgba(46, 41, 51, 0.08),
     0 4px 6px -2px rgba(71, 63, 79, 0.16);
   font-size: 0.875rem;
@@ -106,17 +110,23 @@ header {
   border-radius: 0.5rem;
   display: none;
   width: fit-content;
+  margin-left: 100px;
+  top: -80%;
+  
 }
 
 .dropdown.show {
   display: block;
+  
 }
 
 .dropdown .dropdown-submenu {
   position: absolute;
   left: 100%;
-  top: -8px;
+  top: -140px;
   margin-top: 4px;
+  margin-left: 0px;
+  
 }
 .kh{
   background-color: blue;
